impr: implement a static binding alternative
